--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <section class="servicos">
     <h2>Serviços Oferecidos</h2>
     <div class="servico">
-      <p>Serviço 1 - Descrição do serviço 1</p>
+      <p>Serviço 1 - Descascar bananas</p>
       <p>R$ 50,00</p>
     </div>
     <div class="servico">
-      <p>Serviço 2 - Descrição do serviço 2</p>
+      <p>Serviço 2 - Descascar abacaxis</p>
       <p>R$ 100,00</p>
     </div>
   </section>
